# Biblioteca

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  TODOS.md  docker-compose.yml  pyproject.toml
.supervisor/: state.json
agents/prompts/: _extraction-shared.md  extraction-meeting.md  extraction-paper.md  extraction-report.md  extraction-sop.md  extraction.md  graph_curator.md  ingestion.md  normalization.md  query_agent.md  relevance_scorer.md  reviewer.md  wiki_compiler.md
config/: entity-normalization.yaml  mcp-sources.yaml  settings.yaml  sources.yaml  taxonomy.yaml
config/page-templates/: _fallback.md  cell.md  component.md  dataset.md  document.md  formulation.md  internal-report.md  material.md  mechanism.md  meeting.md  process.md  project.md  property.md  sop.md  synthesis.md  test.md
deploy/: cloudflared.example.yml
docs/: handoff-step4.md  handoff-step5-prompt.md  handoff-step5.md  mcp-source-protocol-v0.1.md  review-step4.md  review-step5.md  roadmap.md
docs/api/: v1.md
docs/architecture/: current-runtime.md
examples/writing-app/: README.md
graph/schema/: schema.json
raw/meetings/: sample-meeting-notes.md
raw/papers/: sample-lfp-degradation.manifest.json  sample-lfp-degradation.md
raw/sop/: sample-coin-cell-assembly.md
retrieval/chunks/: papers-sample-lfp-degradation.jsonl
retrieval/metadata/: papers-sample-lfp-degradation.json
scripts/: start-web.sh
src/llm_rag/: cli.py  (+2 more)
tests/: test_agent_runner.py  test_backward_compat.py  test_chunking.py  test_cli.py  test_config.py  test_hashing.py  test_materialize_cli.py  test_schemas.py
web/: README.md  index.html  package-lock.json  package.json  requirements.txt  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
wiki/: index.md  log.md
(+153 files in other folders)
